terraform/modules/security_group/main.tf
resource "aws_security_group" "my_sg" {
    name = var.sg_name
    description = var.sg_description
    vpc_id = var.vpc_id  #verifica VPC ID! Oricare cont are un VPC default

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 8080
        to_port = 8080
        protocol ="tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
